--- a/app/src/main/res/drawable-v24/bg_spinner_white.xml
+++ b/app/src/main/res/drawable-v24/bg_spinner_white.xml
@@ -6,7 +6,7 @@
                 <color android:color="@color/white" />
 
             </item>
-            <item android:drawable="@drawable/dropdown" android:gravity="end" android:end="10dp">
+            <item android:drawable="@drawable/dropdown" android:gravity="end" android:end="10dp" android:top="14dp" android:bottom="14dp">
             </item>
         </layer-list>
     </item>
