--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -5,16 +5,16 @@
             <item>
                 <shape android:shape="rectangle">
                     <corners
-                    android:radius="12dp"/>
+                    android:radius="14dp"/>
                     <stroke
                         android:width="1dp"
                         android:color="@color/greenMenu" />
                 </shape>
             </item>
-            <item android:drawable="@drawable/dropdown" android:gravity="end" android:end="10dp">
+            <item android:drawable="@drawable/dropdown" android:gravity="end" android:top="14dp" android:bottom="14dp" android:end="10dp" >
 
             </item>
-            <item android:drawable="@drawable/dollar" android:gravity="start" android:top="8dp" android:bottom="8dp" android:start="13dp">
+            <item android:drawable="@drawable/dollar" android:gravity="start" android:bottom="5dp" android:top="5dp" android:start="13dp">
 
             </item>
         </layer-list>
