--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.HomeActivity">
+    tools:context=".activity.HomeActivity"
+    android:noHistory="true">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,22 +15,30 @@
 
         <Spinner
             android:id="@+id/spinnerYear"
+            android:layout_width="260dp"
+            android:layout_height="33dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="18dp"
-            android:layout_width="264dp"
-            android:layout_height="40dp"
             android:background="@drawable/bg_spinner_white"
             android:paddingStart="45dp"
             android:spinnerMode="dropdown"
             android:textSize="14sp"
-            tools:ignore="RtlSymmetry" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+             />
 
         <Button
             android:id="@+id/buttonAdd"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="300dp"
+            android:layout_marginHorizontal="290dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:text="@string/add" />
     </FrameLayout>
 
