--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -83,7 +83,7 @@
         app:layout_constraintVertical_bias="0.134" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/numberTextView"
         android:layout_width="27dp"
         android:layout_height="24dp"
         android:text="0"
