--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.HomeActivity"
-    android:noHistory="true">
+    tools:context=".activity.HomeActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
