--- a/app/src/main/res/layout/activity_finance.xml
+++ b/app/src/main/res/layout/activity_finance.xml
@@ -7,9 +7,9 @@
     tools:context=".activity.FinanceActivity">
 
     <Spinner
-        android:id="@+id/spinnerTransactionType"
+        android:id="@+id/spinnerAction"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:background="@drawable/bg_spinner"
         android:paddingStart="45dp"
         android:spinnerMode="dropdown"
@@ -26,11 +26,11 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_background"
-        android:drawableStart="@drawable/email"
+        android:drawableStart="@drawable/dollar"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
+        android:hint="@string/amount"
+        android:inputType="numberDecimal"
         android:paddingStart="15dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
@@ -45,6 +45,7 @@
     <Button
         android:id="@+id/addFinanceButton"
         android:layout_width="wrap_content"
+        android:backgroundTint="@color/greenMenu"
         android:layout_height="wrap_content"
         android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +87,7 @@
         android:id="@+id/vatCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
+        android:text="@string/addVat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.173"
@@ -99,11 +100,11 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_background"
-        android:drawableStart="@drawable/email"
+        android:drawableStart="@drawable/procent"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
+        android:hint="@string/vat"
+        android:inputType="numberDecimal"
         android:paddingStart="15dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
