--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/greenMenu"
+        android:background="@color/grey"
         tools:ignore="MissingConstraints">
 
         <Spinner
@@ -17,7 +17,7 @@
             android:layout_width="260dp"
             android:layout_height="33dp"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="22dp"
             android:background="@drawable/bg_spinner_white"
             android:paddingStart="45dp"
             android:spinnerMode="dropdown"
@@ -31,6 +31,7 @@
         <Button
             android:id="@+id/buttonAdd"
             android:layout_width="100dp"
+            android:backgroundTint="@color/greenMenu"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="290dp"
